applications/example/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  namespace: example
  name: example-gw
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http-example
        protocol: HTTP
      hosts:
        - example.anhdv.dev
    - port:
        number: 443
        name: https-example
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: "example.anhdv.dev-tls"
      hosts:
        - example.anhdv.dev
